--- a/pyramid.html
+++ b/pyramid.html
@@ -5,7 +5,14 @@
 </head>
 <body>
 
-<canvas id="Canvas" width="200" height="200" style="border:1px solid #d3d3d3;">
+<canvas id="Canvas" width="300" height="300" style="border:1px solid #d3d3d3;">
 Your browser does not support the HTML5 canvas tag.</canvas>
+<br>
+<button onclick="xangleP()">X +</button>
+<button onclick="xangleM()">X -</button>
+<button onclick="yangleP()">Y +</button>
+<button onclick="yangleM()">Y -</button>
+<button onclick="zangleP()">Z +</button>
+<button onclick="zangleM()">Z -</button>
 </body>
 </html>
