--- a/pyramid.html
+++ b/pyramid.html
@@ -6,7 +6,9 @@
 <body>
 <div>
 	<center>
-		<canvas id="Canvas" width="300" height="300" style="border:1px solid #d3d3d3;">
+		<canvas id="CanvasPyramid" width="300" height="300" style="border:1px solid #d3d3d3;">
+		Your browser does not support the HTML5 canvas tag.</canvas>
+		<canvas id="CanvasCube" width="300" height="300" style="border:1px solid #d3d3d3;">
 		Your browser does not support the HTML5 canvas tag.</canvas>
 		<br>
 
