--- a/pyramid.html
+++ b/pyramid.html
@@ -19,7 +19,8 @@
 		<button onmousedown="ZangleP()" onmouseup="mouseUp()">Z +</button>
 		<button onmousedown="ZangleM()" onmouseup="mouseUp()">Z -</button>
 		<br>
-		
+		<button onclick="Bigger()">Size ++</button>
+		<button onclick="Smaller()">Size --</button>
 		<button onclick="Reset()">Reset</button>
 	</center>
 </div>
