--- a/3DObjectsRotations.html
+++ b/3DObjectsRotations.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script type="text/javascript" src="pyramid.js"></script>
+<script type="text/javascript" src="3DObjectsRotations.js"></script>
 </head>
 <body>
 <div>
