--- a/3DObjectsRotations.html
+++ b/3DObjectsRotations.html
@@ -6,6 +6,7 @@
 <body>
 <div>
 	<center>
+		<h1> 3DObjectRotations </h1> <h4> by David Tran</h4>
 		<canvas id="CanvasPyramid" width="300" height="300" style="border:1px solid #d3d3d3;">
 		Your browser does not support the HTML5 canvas tag.</canvas>
 		<canvas id="CanvasCube" width="300" height="300" style="border:1px solid #d3d3d3;">
@@ -22,6 +23,14 @@
 		<button onclick="Bigger()">Size ++</button>
 		<button onclick="Smaller()">Size --</button>
 		<button onclick="Reset()">Reset</button>
+		<h2> Instructions </h2>
+		<div>
+			<p>
+				Press and hold x, y, z button to rotate object. <br>
+				Click reset to return to original positions. <br>
+				<b> If rotation animation won't stop refresh page. </b>
+			</p>
+		</div>
 	</center>
 </div>
 </body>
